# fastapi_test

./: main.py  pyproject.toml  pytest.ini
docs/: conf.py  index.rst
src/web13hm/: docker-compose.yml  shemas.py
src/web13hm/conf/: config.py
src/web13hm/database/: db.py  models.py
src/web13hm/repository/: contacts.py  users.py
src/web13hm/routes/: auth.py  contacts.py  users.py
src/web13hm/services/: auth.py  email.py
src/web13hm/services/templates/: email_template.html
tests/: conftest.py  test_unit_repository_contacts.py  test_unit_repository_users.py  test_unit_routes_auth.py
